Logik-Tests gefixt